[svn r1090] (BNK)Von findbugs gefundene Bugs durch schwieriger zu findende ersetzt.